add users migration
